test/ui/tests/lowering/out-of-line-modules/explicit-location-missing-file.stderr
error[E016]: could not load the module `meaningless`
 --> ${DIRECTORY}/lowering/out-of-line-modules/explicit-location-missing-file.lushui:4:1
  |
4 | module meaningless
  | ^^^^^^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/out-of-line-modules/expansion-of-the-void-until-eternity.lushui`: No such file or directory (os error 2)

error: aborting due to previous error
 note: the error E016 has a detailed explanation
 help: run `lushui explain E016` to view it

